multistep form push all done

--- a/src/index.css
+++ b/src/index.css
@@ -81,3 +81,21 @@
   border: 1px solid #767676;
   border-radius: 4px;
 }
+
+.success {
+  -webkit-transition: all 0.5s linear;
+  -moz-transition: all 0.5s linear;
+  -o-transition: all 0.5s linear;
+  transition: all 0.5s linear;
+}
+.fade-in-text {
+  animation: fadeIn 0.5s;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
